# doc_server

./: .dockerignore  .gitignore  Cargo.toml  README.md
public/: style.css
script/: build-doc.sh  build-image.sh
src/: builder.rs  compiler.rs  main.rs  server.rs  store.rs  temp_crate.rs  util.rs  web.rs
src/cratesio/: mod.rs
src/db/: mod.rs  util.rs
src/tasks/: doc.rs  download.rs  expand.rs  mod.rs
src/web/: api.rs  frontend.rs  mod.rs  util.rs
support/: Dockerfile
templates/: crate_index.hbs  index.hbs  layout_header.hbs
